tests/ui/traits/suggest-dereferences/dont-suggest-unsize-deref.stderr
error[E0277]: the trait `IntoIterator` is not implemented for `&dyn IntoIterator<IntoIter = I, Item = i32>`
  --> $DIR/dont-suggest-unsize-deref.rs:11:18
   |
LL |     use_iterator(i);
   |     ------------ ^ the trait `IntoIterator` is not implemented for `&dyn IntoIterator<IntoIter = I, Item = i32>`, which is required by `&dyn IntoIterator<IntoIter = I, Item = i32>: IntoIterator`
   |     |
   |     required by a bound introduced by this call
   |
   = note: required for `&dyn IntoIterator<IntoIter = I, Item = i32>` to implement `IntoIterator`
note: required by a bound in `use_iterator`
  --> $DIR/dont-suggest-unsize-deref.rs:3:8
   |
LL | fn use_iterator<I>(itr: I)
   |    ------------ required by a bound in this function
LL | where
LL |     I: IntoIterator<Item = i32>,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `use_iterator`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
